objects/Presales__c.object
<CustomObject>
    <fields>
        <fullName>ALM_Authentication__c</fullName>
        <label>ALM Authentication</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic Auth</fullName>
                </value>
                <value>
                    <fullName>Token-based</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALM_Hosting__c</fullName>
        <label>ALM Hosting</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Access</fullName>
                </value>
                <value>
                    <fullName>Behind Firewall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALM__c</fullName>
        <label>ALM</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JIRA</fullName>
                </value>
                <value>
                    <fullName>CA Agile</fullName>
                </value>
                <value>
                    <fullName>DevOps</fullName>
                </value>
                <value>
                    <fullName>IBMRTC</fullName>
                </value>
                <value>
                    <fullName>VersionOne</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ARM_Subscriptions__c</fullName>
        <formula>Opportunity_Name__r.Number_of_Product_Subscriptions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARM Subscriptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Presales</relationshipLabel>
        <relationshipName>Presales</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CI_Tool_currently_used__c</fullName>
        <label>CI Tool currently used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Challenges_Processes__c</fullName>
        <inlineHelpText>Document as-is process and/or time taken for it.</inlineHelpText>
        <label>Current Challenges/Processes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Data_Migration_Solution__c</fullName>
        <label>Current Data Migration Solution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Deployment_Solution__c</fullName>
        <label>Current Deployment Solution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_IDE__c</fullName>
        <label>Current IDE</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Welkin Suite</fullName>
                </value>
                <value>
                    <fullName>IntelliJ</fullName>
                </value>
                <value>
                    <fullName>VS Code</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Release_Process__c</fullName>
        <inlineHelpText>Capture branching strategy too.</inlineHelpText>
        <label>Current Release Process</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <label>Current Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery Call</fullName>
                    <default>true</default>
                    <label>Discovery Call</label>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Staged POC</fullName>
                </value>
                <value>
                    <fullName>Custom POC</fullName>
                </value>
                <value>
                    <fullName>Pilot/Implementation</fullName>
                </value>
                <value>
                    <fullName>TAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Timezone__c</fullName>
        <label>Customer Timezone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Size__c</fullName>
        <inlineHelpText>Enter amount in USD only.</inlineHelpText>
        <label>Deal Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Detailed_Use_Cases__c</fullName>
        <label>Detailed Use Cases</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Environments_brought_in_for_PoC__c</fullName>
        <inlineHelpText>Capture data + attachment size of each environment.</inlineHelpText>
        <label>Environments brought in for PoC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Existing_data_backup_solution__c</fullName>
        <label>Existing data backup solution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Description__c</fullName>
        <label>Feature Request Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Features_deployed_to_Prod__c</fullName>
        <inlineHelpText>Enter numeric value.</inlineHelpText>
        <label>#Features deployed to Prod</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Customer_Data_Protected__c</fullName>
        <inlineHelpText>Enter the encryption platform used by customer.</inlineHelpText>
        <label>Is Customer Data Protected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_DX_used__c</fullName>
        <label>Is DX used?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Description__c</fullName>
        <label>Issue Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Issue_Enhancement_in__c</fullName>
        <label>Issue/Enhancement in</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Log_a_Ticket_with__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>Vault</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>CodeScan</fullName>
                </value>
                <value>
                    <fullName>Mulesoft</fullName>
                </value>
                <value>
                    <fullName>RBM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Label_Name__c</fullName>
        <label>Label Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Names__c</fullName>
        <formula>IF(NOT(ISBLANK(  Label_Name__c  )),   Label_Name__c  , &apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Label Names</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lines_of_Code__c</fullName>
        <inlineHelpText>Enter numeric value.</inlineHelpText>
        <label>Lines of Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Log_a_Ticket_with__c</fullName>
        <label>Log a Ticket with</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT Help Desk</fullName>
                </value>
                <value>
                    <fullName>PMT</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managed_Packages__c</fullName>
        <inlineHelpText>List the managed packages that the customer uses.</inlineHelpText>
        <label>Managed Packages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mule_Hosting__c</fullName>
        <label>Mule Hosting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>On-Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity_Name__r.Opportunity_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Presales</relationshipLabel>
        <relationshipName>Presales_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity_Name__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orgs__c</fullName>
        <inlineHelpText>Enter numeric value.</inlineHelpText>
        <label># Orgs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_ALM_Authentication__c</fullName>
        <inlineHelpText>Enter when ALM Authentication is selected as &quot;Other&quot;.</inlineHelpText>
        <label>Other ALM Authentication</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_IDE__c</fullName>
        <inlineHelpText>Enter IDE when Current IDE is selected as &quot;Other&quot;.</inlineHelpText>
        <label>Other IDE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_SCA__c</fullName>
        <inlineHelpText>Enter when the SCA is selected as &quot;Other&quot;.</inlineHelpText>
        <label>Other SCA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_SSO__c</fullName>
        <description>Enter when SSO is selected as &quot;Other&quot;.</description>
        <label>Other SSO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Storage_Environment__c</fullName>
        <inlineHelpText>Enter when Storage Environment is selected as &quot;Other&quot;.</inlineHelpText>
        <label>Other Storage Environment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Test_Automation__c</fullName>
        <inlineHelpText>Enter when Test Automation is selected as &quot;Other&quot;.</inlineHelpText>
        <label>Other Test Automation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_VCS_Authentication__c</fullName>
        <inlineHelpText>Enter VCS Authentication when the VCS Authentication selected is &quot;Other&quot;.</inlineHelpText>
        <label>Other VCS Authentication</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Type__c</fullName>
        <label>POC Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Data and Org</fullName>
                </value>
                <value>
                    <fullName>Playground</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Please select the priority of the Support (ARM/Vault) or the Enhancement request.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Instance__c</fullName>
        <label>Product Instance</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Instance_if_any__c</fullName>
        <formula>IF(NOT(ISBLANK(  Product_Instance__c  )),  Product_Instance__c  , &apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Instance if any</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Text__c</fullName>
        <label>Product Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version_if_any__c</fullName>
        <formula>IF(NOT(ISBLANK(  Product_Version__c  )),  Product_Version__c  , &apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Version if any</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <inlineHelpText>Select the Product applicable.</inlineHelpText>
        <label>Product</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>CodeScan</fullName>
                </value>
                <value>
                    <fullName>Mulesoft</fullName>
                </value>
                <value>
                    <fullName>RBM</fullName>
                </value>
                <value>
                    <fullName>Vault</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Frequency__c</fullName>
        <label>Release Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repositories__c</fullName>
        <inlineHelpText>Enter numeric value.</inlineHelpText>
        <label># Repositories</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Vault_Pre_requisites__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>These pre-requisites are to be communicated to users:
• Active triggers, process builders, workflows, etc. may lead to replicate failures
• Max uncompressed metadata size per job is 400 MB. It is recommended to set an appropriate batch size for any metadata exceeding the limit
• Inactive owners in SF leads to replicate failures
• Include all dependencies in the Replicate job as missing some might lead to failures
• For a PoC, we will request access to the customer environment</inlineHelpText>
        <label>Review Vault Pre-requisites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCA__c</fullName>
        <label>SCA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CodeScan</fullName>
                </value>
                <value>
                    <fullName>Checkmarx</fullName>
                </value>
                <value>
                    <fullName>SonarQube</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>PMD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Developers__c</fullName>
        <inlineHelpText>Enter numeric value.</inlineHelpText>
        <label># SF Developers</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_environments_to_be_scanned__c</fullName>
        <inlineHelpText>Enter numeric value. Include both sandboxes and orgs.</inlineHelpText>
        <label># SF environments to be scanned</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSO__c</fullName>
        <label>SSO</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Okta</fullName>
                </value>
                <value>
                    <fullName>PingFederate</fullName>
                </value>
                <value>
                    <fullName>ADFS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_API_Call_Limit__c</fullName>
        <inlineHelpText>Enter the API call limit per 24 hour period.</inlineHelpText>
        <label>Salesforce API Call Limit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_clouds_used__c</fullName>
        <label>Salesforce clouds used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sandboxes__c</fullName>
        <inlineHelpText>Enter numeric value.</inlineHelpText>
        <label># Sandboxes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Solutions_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Solutions Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Presales_Secondary_Solutions_Architect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Size_of_Largest_Org__c</fullName>
        <inlineHelpText>Capture size of data + attachments separately.</inlineHelpText>
        <label>Size of Largest Org</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solutions_Architect_Notes__c</fullName>
        <inlineHelpText>Capture MoM for every call with customer.</inlineHelpText>
        <label>Solutions Architect Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solutions_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solutions Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Presales_Solutions_Architect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Control__c</fullName>
        <label>Source Control</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Azure DevOps</fullName>
                </value>
                <value>
                    <fullName>Bitbucket</fullName>
                </value>
                <value>
                    <fullName>CodeCommit</fullName>
                </value>
                <value>
                    <fullName>Github</fullName>
                </value>
                <value>
                    <fullName>Gitlab</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SVN</fullName>
                </value>
                <value>
                    <fullName>TFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Upcoming</fullName>
                    <default>true</default>
                    <label>Upcoming</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Environment_Hosting__c</fullName>
        <label>Storage Environment Hosting</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Our Cloud</fullName>
                </value>
                <value>
                    <fullName>Their network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Environment__c</fullName>
        <label>Storage Environment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>GCP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Orientation__c</fullName>
        <label>Team Orientation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Developers</fullName>
                </value>
                <value>
                    <fullName>Architects</fullName>
                </value>
                <value>
                    <fullName>Release Manager</fullName>
                </value>
                <value>
                    <fullName>Compliance Officer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Win__c</fullName>
        <inlineHelpText>Select this checkbox if the product can solve for customer&apos;s technical requirement.</inlineHelpText>
        <label>Technical Win</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Automation__c</fullName>
        <label>Test Automation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selenium</fullName>
                </value>
                <value>
                    <fullName>Provar</fullName>
                </value>
                <value>
                    <fullName>AccelQ</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Cases__c</fullName>
        <label>Use Cases</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Archival</fullName>
                </value>
                <value>
                    <fullName>Auto-Deploy Properties</fullName>
                </value>
                <value>
                    <fullName>Backup</fullName>
                </value>
                <value>
                    <fullName>Build Maven Jobs</fullName>
                </value>
                <value>
                    <fullName>CI Jobs</fullName>
                </value>
                <value>
                    <fullName>Compare</fullName>
                </value>
                <value>
                    <fullName>Dataloader</fullName>
                </value>
                <value>
                    <fullName>Environment Provisioning</fullName>
                </value>
                <value>
                    <fullName>Environment Registrations</fullName>
                </value>
                <value>
                    <fullName>GDPR</fullName>
                </value>
                <value>
                    <fullName>Identify Issues</fullName>
                </value>
                <value>
                    <fullName>Manage Environment Properties</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>nCino</fullName>
                </value>
                <value>
                    <fullName>Org Synchronization</fullName>
                </value>
                <value>
                    <fullName>Profile Manager</fullName>
                </value>
                <value>
                    <fullName>Replicate</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Restore</fullName>
                </value>
                <value>
                    <fullName>SalesforceDX</fullName>
                </value>
                <value>
                    <fullName>Security Compliance</fullName>
                </value>
                <value>
                    <fullName>Selective Deployment</fullName>
                </value>
                <value>
                    <fullName>Template Configuration</fullName>
                </value>
                <value>
                    <fullName>Template Deployment</fullName>
                </value>
                <value>
                    <fullName>Test Execution</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Version Control</fullName>
                </value>
                <value>
                    <fullName>Vlocity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VCS_Authentication__c</fullName>
        <label>VCS Authentication</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic Auth</fullName>
                </value>
                <value>
                    <fullName>Token-based</fullName>
                </value>
                <value>
                    <fullName>SSH</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VCS_Hosting__c</fullName>
        <label>VCS Hosting</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Access</fullName>
                </value>
                <value>
                    <fullName>Behind Firewall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>